# rust-fp

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Makefile  README.md  compose.yaml  cspell.config.yaml
.claude/: settings.local.json
.claude/agents/: aws-log-investigator.md  github-spec-kit-architect.md  pjt-security-code-reviewer.md  rust-runtime-specialist.md
.devcontainer/: Dockerfile  compose.override.yaml.sample  compose.yaml  devcontainer.json  init-firewall.sh  setup.sh  whitelist_domains.conf
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cicd.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
crates/api/: Cargo.toml
crates/api/src/: main.rs  response.rs
crates/api/src/middleware/: cognito_auth.rs  mod.rs  request_id.rs  request_logger.rs
crates/api/src/routes/: mod.rs  router.rs  tasks.rs  test_support.rs  users.rs
crates/api/src/routes/tasks/: delete.rs  get.rs  list.rs  mod.rs  post.rs  put.rs  types.rs
crates/api/src/routes/users/: delete.rs  get.rs  get_by_email.rs  get_by_username.rs  list.rs  mod.rs  post.rs  put.rs  types.rs
crates/application/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: db.rs  lib.rs  task_repo.rs  user_repo.rs
crates/infrastructure/src/task_repo/: create_task.rs  delete_task.rs  get_task.rs  list_tasks.rs  mod.rs  repository.rs  update_task.rs
crates/infrastructure/src/user_repo/: create_user.rs  delete_user.rs  get_user.rs  get_user_by_email.rs  get_user_by_username.rs  list_users.rs  mod.rs  repository.rs  update_user.rs
migrations/: 20250213000000_init.sql  20250214000000_normalize_tasks_users.sql
(+33 files in other folders)
