[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { path = "../domain" }
serde = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
